welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: '=' expected but '(' found.
	       avance()
                     ^PatternPicture:4: error: illegal start of simple expression
	       baisseBrosse()
^